Add instructions for JCA requirements